--- a/index.html
+++ b/index.html
@@ -140,21 +140,22 @@
       
               <hr>
               <li class="active">
-                <a href="#"><i class="calendar-ic"></i>
+                <a href="#"><i class="calendar-ic calendar-ic--week"></i>
                   Неделя <span class="badge">42</span></a></li>
               <li>
-                <a href="#"><i class="calendar-ic"></i>
+                <a href="#"><i class="calendar-ic calendar-ic--month"></i>
                   Месяц <span class="badge">139</span></a></li>
               <li>
-                <a href="#"><i class="calendar-ic"></i>
-                  Год</a></li>
+                <a href="#"><i class="calendar-ic calendar-ic--year"></i>
+                  Год</a>
+              </li>
               <li>
-                <a href="#"><i class="flame-ic"></i>
-                  Важные <span class="badge">5</span></a>
+                <a href="#"><i class="calendar-ic calendar-ic--without"></i>
+                  Без даты <span class="badge">5</span></a>
               </li>
               <li>
                 <a href="#"><i class="flame-ic"></i>
-                  Без даты <span class="badge">5</span></a>
+                  Важные <span class="badge">5</span></a>
               </li>
               <li>
                 <a href="#"><i class="check-ic check-ic--menu"></i>
