--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       
             <div class="profile profile--login">
               <img src="build/img/avatar.png" class="img-circle">
-              <h4>Аноним <br><a href="#auth">Войти</a></h4>
+              <h4><a href="#auth">Войти</a></h4>
             </div>
       
           </div>
